# vsql-ai

./: AGENTS.md  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  manifest.json
cmake/: FindVillageSQL.cmake
src/: ai_functions.cc  ai_providers.cc  ai_providers.h  http_client.cc  http_client.h
test/r/: ai_prompt_anthropic.result  ai_prompt_google.result  create_embed_google.result  error_handling.result
test/t/: ai_prompt_anthropic.test  ai_prompt_google.test  create_embed_google.test  error_handling.test
